kubernetes/apps/observability/grafana/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 80
      targetPort: 80
